users register swagger documentatión done
